# life-game-studio

./: .gitignore  README.md  app_end.txt  index.html  lib_end.txt  shader_end.txt
.github/workflows/: deploy.yml
assets/: hashlife.worker-BWkz0lxW.js  hashlife.worker-Bgx1Vlfd.js  hashlife.worker-CaWHgh1Q.js  hashlife.worker-Co8-LRPO.js  hashlife.worker-Czo03rVZ.js  index-BV2C6lAV.js  index-CRF1lBBG.js  index-CZ_TLJxQ.js  index-DBrbGEK4.js  index-DW-M8clK.js  index-DXQ3lmR4.js  index-Dv3UJXXl.css  wasm_life_bg-DR2guWhJ.wasm  wasm_life_bg-DivR7Mdt.wasm  wasm_life_bg-OO4-w9FV.wasm  wasm_life_bg-tjZ7Z4Nm.wasm  webgpu_life_bg-B7RPhGAd.wasm  webgpu_life_bg-CO3ZDYOG.wasm  webgpu_life_bg-CxBkm4Ud.wasm  webgpu_life_bg-DMxzv1Wm.wasm  webgpu_life_bg-DVj1REK1.wasm
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  hashlife.worker.ts
frontend/src/utils/: rle.ts
smeagol-patched/: .cargo_vcs_info.json  Cargo.toml
smeagol-patched/assets/: waterbear.mc
smeagol-patched/src/: lib.rs  node.rs
smeagol-patched/src/node/: store.rs
smeagol-patched/src/node/impls/: evolve.rs
wasm-life/: Cargo.toml
wasm-life/benches/: life_benchmark.rs
wasm-life/src/: lib.rs
webgpu-life/: Cargo.toml
webgpu-life/src/: lib.rs  shader.wgsl
