[package]
name = "wasm-life"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
smeagol = { path = "../smeagol-patched" }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "life_benchmark"
harness = false
