[package]
name = "webgpu-life"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "24.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "GpuDevice", "GpuAdapter"] }
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
wasm-bindgen-futures = "0.4"
